--- a/src/components/EditTools/EditTools.scss
+++ b/src/components/EditTools/EditTools.scss
@@ -16,6 +16,30 @@
 }
 
 .QuestionsTypes-content, .SurveySettings-content {
-  padding: 10px;
+  // padding: 10px;
+}
 
+.QuestionElement {
+  cursor: move;
+  border-bottom: 1px solid #ccc;
+  padding: 5px 30px;;
+  position: relative;
+}
+
+.QuestionElement:hover {
+  background: #ddd;
+}
+.QuestionElement__icon {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  font-size: 20px;
+}
+
+.QuestionCanvas {
+  padding: 10px;
+  border:1px dashed #ccc;
+}
+.QuestionCanvas__help {
+  text-align: center;
 }
